added more images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <img class="image" src="images/606225.jpg" alt="anime" draggable="false">
         <img class="image" src="images/1028306.png" alt="anime" draggable="false">
         <img class="image" src="images/654247.jpg" alt="anime" draggable="false">
-        <img class="image" src="images/credly.jpg" alt="anime" draggable="false">
+        <img class="image" src="images/259823.jpg" alt="anime" draggable="false">
+        <img class="image" src="images/1286464.jpg" alt="anime" draggable="false">
     </div>
 </body>
 <script src="main.js"></script>
